--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "json-server": "json-server --watch db.json --port 5000"
   },
   "dependencies": {
+    "json-server": "^1.0.0-beta.3",
     "next": "15.2.1",
     "next-connect": "^1.0.0",
     "react": "^19.0.0",
