--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "json-server": "json-server --watch db.json --port 5000"
   },
   "dependencies": {
+    "axios": "^1.8.3",
     "json-server": "^1.0.0-beta.3",
     "next": "15.2.1",
     "next-connect": "^1.0.0",
+    "pg": "^8.14.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "sqlite": "^5.1.1",
